WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278789
Navigation preload ready message is lost if the IPC connection to the worker context is not already created
https://bugs.webkit.org/show_bug.cgi?id=278789
Summary
Navigation preload ready message is lost if the IPC connection to the worker ...
youenn fablet
Reported
2024-08-28 07:02:05 PDT
Navigation preload ready message is lost if the IPC connection to the worker context is not already created
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-28 07:02:21 PDT
<
rdar://problem/134853479
>
youenn fablet
Comment 2
2024-08-28 07:43:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32827
EWS
Comment 3
2024-08-29 08:05:16 PDT
Committed
282907@main
(f0bfc40dac3c): <
https://commits.webkit.org/282907@main
> Reviewed commits have been landed. Closing PR #32827 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug